# MiniLPP

./: .gitignore  CMakeLists.txt  ast.tc  clean.sh  compile.sh  lexer.l  main.cpp  parser.y  prog_exec.sh  run.sh
Specs/: grammar.txt
tests/: ArgsFunction.txt  ArgsProcedure.txt  ArgsProcedureArray.txt  Arreglo.txt  BoolOperation.txt  BoolVar.txt  DoWhile.txt  ForLoop.txt  HolaMundo.txt  If.txt  NoArgsFunction.txt  NoArgsProcedure.txt  PairNumber.txt  SumaEntero.txt  While.txt  input.txt
